--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,6 @@ readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
+
+[project.urls]
+Home = "https://github.com/gebnar/PythonDynamicDict"
