--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,17 @@ name = "DynamicDict"
 authors = [{name = "Shane Plesner", email = "gebnar@gmail.com"}]
 readme = "README.md"
 license = {file = "LICENSE"}
-classifiers = ["License :: OSI Approved :: MIT License"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11"
+]
 dynamic = ["version", "description"]
+requires-python = ">=3.8, <4.0"
 
 [project.urls]
 Home = "https://github.com/gebnar/PythonDynamicDict"
