--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "dynamic_dict"
+name = "DynamicDict"
 authors = [{name = "Shane Plesner", email = "gebnar@gmail.com"}]
 readme = "README.md"
 license = {file = "LICENSE"}
